Changed spacing between flashes and navbar and fixed other bugs

--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -224,7 +224,7 @@ i.fa.fa-user:active {
     background-color: transparent;
 }
 
-.collapsing, .in {
+.collapsing {
     box-shadow: 0 4px 7px -5px #333, inset 0 7px 9px -7px rgba(0, 0, 0, 0.5);
 }
 
